# memexfs

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  package.json
docs/: architecture.md  spec.md
fixtures/nested/: top.md
fixtures/nested/subdir/: deep.md
js/: bench.mjs  collect.d.mts  collect.mjs  loader.d.mts  loader.mjs  loader.test.mjs  pool.d.mts  pool.mjs  pool.test.mjs  worker.mjs
src/: document.rs  error.rs  index.rs  lib.rs  store.rs
tests/: fixtures.rs
